// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayListGroupItem should render a ClayListGroupItem with action menu 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">Item 1</h4>
  </div>
  <div class="flex-col">
    <div class="quick-action-menu"></div>
    <div class="dropdown dropdown-action">
      <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
        </svg>
      </button>
      <div class="dropdown-menu">
        <ul class="list-unstyled">
          <li>
            <a class=" dropdown-item" href="#1">Option 1</a>
          </li>
          <li>
            <a class=" dropdown-item" href="#2">Option 2</a>
          </li>
          <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
          <li>
            <a class=" dropdown-item" href="#3">Option 3</a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</li>
`;

exports[`ClayListGroupItem should render a ClayListGroupItem with circle icons 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col">
    <span class="sticker sticker-primary rounded-circle">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
      </svg>
    </span>
  </div>
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">Item 1</h4>
  </div>
</li>
`;

exports[`ClayListGroupItem should render a ClayListGroupItem with classes 1`] = `<li class="list-group-item list-group-item-flex my-custom-class">My Item</li>`;

exports[`ClayListGroupItem should render a ClayListGroupItem with description 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">Item 1</h4>
    <p class="list-group-subtitle text-truncate">Description 1</p>
  </div>
</li>
`;

exports[`ClayListGroupItem should render a ClayListGroupItem with description and url 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">
      <a href="#1">Item 1</a>
    </h4>
    <p class="list-group-subtitle text-truncate">Description 1</p>
  </div>
</li>
`;

exports[`ClayListGroupItem should render a ClayListGroupItem with icon 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col">
    <span class="sticker sticker-primary">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
        <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
      </svg>
    </span>
  </div>
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">Item 1</h4>
  </div>
</li>
`;

exports[`ClayListGroupItem should render a ClayListGroupItem with id 1`] = `<li class="list-group-item list-group-item-flex" id="myId">My Item</li>`;

exports[`ClayListGroupItem should render a ClayListGroupItem with label 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">Item 1</h4>
    <div class="list-group-detail">
      <span class="label label-secondary">Status</span>
    </div>
  </div>
</li>
`;

exports[`ClayListGroupItem should render a ClayListGroupItem with link 1`] = `
<li class="list-group-item list-group-item-flex">
  <a href="#1">Item 1</a>
</li>
`;

exports[`ClayListGroupItem should render a ClayListGroupItem with quick action menu 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">Item 1</h4>
  </div>
  <div class="flex-col">
    <div class="quick-action-menu">
      <a class=" quick-action-item">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
        </svg>
      </a>
      <a class=" quick-action-item">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
        </svg>
      </a>
      <a class=" quick-action-item">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle-open">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#info-circle-open"></use>
        </svg>
      </a>
    </div>
    <div class="dropdown dropdown-action">
      <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
        </svg>
      </button>
      <div class="dropdown-menu">
        <ul class="list-unstyled">
          <li>
            <a class=" dropdown-item" href="#1">Option 1</a>
          </li>
          <li>
            <a class=" dropdown-item" href="#2">Option 2</a>
          </li>
          <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
          <li>
            <a class=" dropdown-item" href="#3">Option 3</a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</li>
`;

exports[`ClayListGroupItem should render a selectable ClayListGroupItem 1`] = `
<li class="list-group-item list-group-item-flex">
  <div class="flex-col">
    <div class="custom-control custom-checkbox">
      <label>
        <input class="custom-control-input" ref="input" type="checkbox">
        <span class="custom-control-indicator"></span>
        <span class="custom-control-description sr-only">select</span>
      </label>
    </div>
  </div>
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">
      <a href="#1">Item 1</a>
    </h4>
    <p class="list-group-subtitle text-truncate">Description 1</p>
  </div>
</li>
`;

exports[`ClayListGroupItem should render a selected ClayListGroupItem 1`] = `
<li class="list-group-item list-group-item-flex active">
  <div class="flex-col">
    <div class="custom-control custom-checkbox">
      <label>
        <input checked="" class="custom-control-input" ref="input" type="checkbox">
        <span class="custom-control-indicator"></span>
        <span class="custom-control-description sr-only">select</span>
      </label>
    </div>
  </div>
  <div class="flex-col flex-col-expand">
    <h4 class="list-group-title text-truncate">
      <a href="#1">Item 1</a>
    </h4>
    <p class="list-group-subtitle text-truncate">Description 1</p>
  </div>
</li>
`;

exports[`ClayListGroupItem should render the default markup 1`] = `<li class="list-group-item list-group-item-flex">My Item</li>`;
